--- a/posts/00-one-csv-thirty-stories.textile
+++ b/posts/00-one-csv-thirty-stories.textile
@@ -4,7 +4,7 @@ I've hit something of a creative impasse. I stopped blogging here a while ago, a
 
 A number of colleagues for similar reasons have successfully used the "30 days song challenge":http://heckyeahtumblrchallenges.tumblr.com/post/6152604154/30-day-song-challenge to unblock their blogging, and this has inspired me to try something similar, something to force me to make visualisations, and write about them.
 
-So I've picked on a single dataset, "the list of price paid for property":https://www.gov.uk/government/statistical-data-sets/price-paid-data-downloads from "The Land Registry":https://www.gov.uk/government/organisations/land-registry, and every day over the next month I'll use it to make 30 small things to talk about open data and visualisation. Thirty is "a nice round number":http://backtothefuture.wikia.com/wiki/DeLorean_time_machine, but at this point seems quite unachievable and a little ridiculous for what is after all a single CSV file.
+So I've picked on a single dataset, "the list of price paid for property":https://www.gov.uk/government/statistical-data-sets/price-paid-data-downloads from "The Land Registry":https://www.gov.uk/government/organisations/land-registry, and every day over the next month I'll use it to make 30 small things to talk about open data and visualisation. Thirty is "a nice round number":http://backtothefuture.wikia.com/wiki/DeLorean_time_machine, and at this point seems almost unachievable. It also feels more than a little ridiculous to constrain myself to obsessing over just a single CSV file. But that's the point. To stir myself into action with something challenging, but very constrained.
 
 The code for these articles will be "open source":https://github.com/psd/price-paid-data, natch, and I'll aim to build "a portfolio site":http://psd.github.io/price-paid-data as we go along.
 
