--- a/README.textile
+++ b/README.textile
@@ -3,3 +3,6 @@ h1. One CSV, thirty stories.
 Thirty stories about the Land Registry price paid open data set.
 
 bc. $ make
+
+Depends upon:
+    * http://www.imagemagick.org/
