--- a/posts/05-axis.textile
+++ b/posts/05-axis.textile
@@ -27,6 +27,6 @@ Ignoring the outliers, and digging into the lower popular prices:
 
 <a href="https://www.flickr.com/photos/psd/15567751792" title="Scatter plot of lower house prices by Paul Downey, on Flickr"><img src="https://farm4.staticflickr.com/3939/15567751792_f6d1c108a1_b.jpg" width="1024" height="768" alt="Scatter plot of lower house prices"></a>
 
-The axes help us confirm the dip of the recession in 2009, and reveals seasonal peaks in summer and strong vertical gaps each new year. Horizontal bands show how property prices bunch between round numbers. Prices below 50k start to disappear from 2004, and skip around "stamp duty bands":http://www.stampdutyrates.co.uk/historic-rates.html, particularly noticeably at £250k and £60k, which was withdrawn in 2005 when the gap closes, and then opens up again at £125 which was introduced in 2006.
+The axes help us confirm the dip of the recession in 2009, and reveals seasonal peaks in summer and strong vertical gaps each new year. Horizontal bands show how property prices bunch between round numbers. Prices below 50k start to disappear from 2004, and skip around "stamp duty bands":http://www.stampdutyrates.co.uk/historic-rates.html, particularly noticeably at £250k and £60k, which was withdrawn in 2005 when the gap closes, and then opens up again at £125 which was introduced in 2006. Finally, there's a prominent gap to correlate with the £175k band which ran between 2008 and 2010.
 
 The seasonal trends are worth exploring further, but I think we first need to dig deeper into the horizontal banding, so I'm 82.3% confident tomorrow will be "Talk like a statistician day".
